Fix paramiko pipeline failure
Python library Paramiko (which is required for testing with Tinc) was
recently removed from the python-dependencies.txt file of the GPDB repo
as well as the Dockerfiles in `gpdb/src/tools/docker`.  This led to
several pipeline failures when testing against GPDB master and
6X_STABLE. On 5X, paramiko is still being bundled inside of
`bin_gpdb.tar.gz`, so our 5X builds were unaffected.

Paramiko was available on the CentOS concourse boxes for a while because
we were not triggering our `cdh`, `hdp`, and `mapr` server builds. This
commit corrects that, and ensures that PYTHONPATH in the Tinc test
environment points to system python libraries for CentOS 6/7 and Ubuntu
16. This ensures that things in the system python libraries can be
accessed by Tinc, including paramiko, its dependencies, and another
python library `psi`.

The pxf-dev-base Dockerfile now installs paramiko. Some logic is
required to do this in the Dockerfile since CentOS 6 uses python 2.6 and
paramiko doesn't support python 2.6 anymore (`pip install` won't work in
that case, we rely on `yum`).

Finally, to support Ubuntu better, we switch to only strict POSIX shell
features in Makefiles. In Ubuntu, the POSIX shell is dash and it doesn't
support `[[` or `==` notations.

Co-authored-by: Oliver Albertini <oalbertini@pivotal.io>
Co-authored-by: Raymond Yin <ryin@pivotal.io>
Co-authored-by: Alex Denissov <adenissov@pivotal.io>

--- a/automation/Makefile
+++ b/automation/Makefile
@@ -121,17 +121,17 @@ sync_jdbc_config:
 sync_cloud_configs:
 ifneq "$(PROTOCOL)" ""
 	@mkdir -p $(PROTOCOL_HOME)
-	@if [[ ! -f "$(PROTOCOL_HOME)/$(PROTOCOL)-site.xml" ]]; then \
+	@if [ ! -f "$(PROTOCOL_HOME)/$(PROTOCOL)-site.xml" ]; then \
 		cp $(PXF_HOME)/templates/user/templates/$(PROTOCOL)-site.xml $(PROTOCOL_HOME)/; \
 		cp $(PXF_HOME)/templates/user/templates/mapred-site.xml $(PROTOCOL_HOME)/; \
-		if [[ $(PROTOCOL) == s3 ]]; then \
-			if [[ "$(MINIO)" == "true" ]]; then \
+		if [ $(PROTOCOL) = s3 ]; then \
+			if [ "$(MINIO)" = "true" ]; then \
 				cp $(PXF_HOME)/templates/user/templates/minio-site.xml $(PROTOCOL_HOME)/$(PROTOCOL)-site.xml; \
 				sed $(SED_OPTS) "s|YOUR_MINIO_URL|http://localhost:9000|" $(PROTOCOL_HOME)/$(PROTOCOL)-site.xml; \
 			fi; \
 			mkdir -p $(PROTOCOL_HOME)-invalid; \
 			cp $(PXF_HOME)/templates/user/templates/$(PROTOCOL)-site.xml $(PROTOCOL_HOME)-invalid/; \
-			if [[ -z "$(ACCESS_KEY_ID)" ]] || [[ -z "$(SECRET_ACCESS_KEY)" ]]; then \
+			if [ -z "$(ACCESS_KEY_ID)" ] || [ -z "$(SECRET_ACCESS_KEY)" ]; then \
 				echo "AWS Keys (ACCESS_KEY_ID, SECRET_ACCESS_KEY) not set"; \
 				rm -rf $(PROTOCOL_HOME); \
 				exit 1; \
@@ -139,8 +139,8 @@ ifneq "$(PROTOCOL)" ""
 			sed $(SED_OPTS) "s|YOUR_AWS_ACCESS_KEY_ID|$(ACCESS_KEY_ID)|" $(PROTOCOL_HOME)/$(PROTOCOL)-site.xml; \
 			sed $(SED_OPTS) "s|YOUR_AWS_SECRET_ACCESS_KEY|$(SECRET_ACCESS_KEY)|" $(PROTOCOL_HOME)/$(PROTOCOL)-site.xml; \
 		fi; \
-		if [[ $(PROTOCOL) == adl ]]; then \
-			if [[ -z "$(ADL_ACCOUNT)" ]] || [[ -z "$(ADL_REFRESH_URL)" ]] || [[ -z "$(ADL_CLIENT_ID)" ]] || [[ -z "$(ADL_CREDENTIAL)" ]]; then \
+		if [ $(PROTOCOL) = adl ]; then \
+			if [ -z "$(ADL_ACCOUNT)" ] || [ -z "$(ADL_REFRESH_URL)" ] || [ -z "$(ADL_CLIENT_ID)" ] || [ -z "$(ADL_CREDENTIAL)" ]; then \
 				echo "ADL Keys (ADL_ACCOUNT, ADL_CLIENT_ID, ADL_CREDENTIAL, ADL_REFRESH_URL) not set"; \
 				rm -rf $(PROTOCOL_HOME); \
 				exit 1; \
@@ -149,8 +149,8 @@ ifneq "$(PROTOCOL)" ""
 			sed $(SED_OPTS) "s|YOUR_ADL_CLIENT_ID|$(ADL_CLIENT_ID)|" $(PROTOCOL_HOME)/$(PROTOCOL)-site.xml; \
 			sed $(SED_OPTS) "s|YOUR_ADL_CREDENTIAL|$(ADL_CREDENTIAL)|" $(PROTOCOL_HOME)/$(PROTOCOL)-site.xml; \
 		fi; \
-		if [[ $(PROTOCOL) == gs ]]; then \
-			if [[ ! -f /tmp/gsc-ci-service-account.key.json ]]; then \
+		if [ $(PROTOCOL) = gs ]; then \
+			if [ ! -f /tmp/gsc-ci-service-account.key.json ]; then \
 				echo "Google Service Account Key JSON file does exist in /tmp/gsc-ci-service-account.key.json"; \
 				rm -rf $(PROTOCOL_HOME); \
 				exit 1; \
@@ -158,8 +158,8 @@ ifneq "$(PROTOCOL)" ""
 			sed $(SED_OPTS) "s|YOUR_GOOGLE_STORAGE_KEYFILE|/tmp/gsc-ci-service-account.key.json|" $(PROTOCOL_HOME)/$(PROTOCOL)-site.xml; \
 		fi; \
 		echo "Created $(PROTOCOL) server configuration"; \
-		if [[ $(PROTOCOL) == wasbs ]]; then \
-			if [[ -z "$(WASB_ACCOUNT_NAME)" ]] || [[ -z "$(WASB_ACCOUNT_KEY)" ]]; then \
+		if [ $(PROTOCOL) = wasbs ]; then \
+			if [ -z "$(WASB_ACCOUNT_NAME)" ] || [ -z "$(WASB_ACCOUNT_KEY)" ]; then \
 				echo "Azure Blob Storage Keys (WASB_ACCOUNT_NAME, WASB_ACCOUNT_KEY) not set"; \
 				rm -rf $(PROTOCOL_HOME); \
 				exit 1; \
