Test PXF against GPDB 6X/master on Ubuntu18
* Make the docker pipeline produce Ubuntu18 from the OSS Dockerfile
`gpdb/src/tools/docker/ubuntu/Dockerfile`
* Modify `deploy` script to have Ubuntu18 jobs wherever the GPDB branch
is not 5X_STABLE
* Consume the correct release-candidates (no intermediates)
* Install Perl 5.22.1 on Ubuntu18 at the `pxf-dev-base` stage
* Gate final jobs (e.g. `build_release_candidate_centos` and
`promote_pxf_artifact`) on ubuntu18
* Get rid of annoying Concourse warnings like:
[WARNING] TEST_OS was defined in pipeline but missing from task file
* Remove pxf_pipeline-generated.yml because it is not used
(state-checker only cares about the release_pipeline-generated.yml)

Authored-by: Oliver Albertini <oalbertini@pivotal.io>

--- a/concourse/docker/pxf-dev-base/Dockerfile
+++ b/concourse/docker/pxf-dev-base/Dockerfile
@@ -38,4 +38,13 @@ RUN ["/bin/bash", "-c", "export BUILD_PARAMS=-Dorg.gradle.daemon=false && \
       yum install -y python-paramiko && yum clean all; \
     else \
       pip install psi paramiko --no-cache-dir; \
+    fi && \
+    if grep 'VERSION=.*18.04.*LTS.*Bionic Beaver.*$' /etc/os-release; then \
+      PERL_VERSION=perl-5.22.1 && \
+      wget http://www.cpan.org/src/5.0/${PERL_VERSION}.tar.gz && \
+      tar -xzf ${PERL_VERSION}.tar.gz && \
+      pushd $PERL_VERSION && \
+        ./Configure -des -Dprefix=/usr && \
+        make && make install && \
+      popd && rm -rf ${PERL_VERSION}*; \
     fi"]
