--- a/concourse/pipelines/docker-images.yml
+++ b/concourse/pipelines/docker-images.yml
@@ -9,11 +9,13 @@ groups:
 #  - docker-gpdb-dev-centos7-hdp-secure
   - docker-gpdb-dev-centos7
   - docker-gpdb-dev-ubuntu16
+  - docker-gpdb-dev-ubuntu18
   - singlecluster_noarch_cdh
   - singlecluster_noarch_hdp
   - docker-gpdb-pxf-dev-centos6
   - docker-gpdb-pxf-dev-centos7
   - docker-gpdb-pxf-dev-ubuntu16
+  - docker-gpdb-pxf-dev-ubuntu18
   - docker-gpdb-pxf-dev-centos6-mapr-server
   - docker-gpdb-pxf-dev-centos6-cdh-server
   - docker-gpdb-pxf-dev-centos6-hdp-server
@@ -21,7 +23,9 @@ groups:
   - docker-gpdb-pxf-dev-centos7-cdh-server
   - docker-gpdb-pxf-dev-centos7-hdp-server
   - docker-gpdb-pxf-dev-ubuntu16-cdh-server
+  - docker-gpdb-pxf-dev-ubuntu18-cdh-server
   - docker-gpdb-pxf-dev-ubuntu16-hdp-server
+  - docker-gpdb-pxf-dev-ubuntu18-hdp-server
 
 - name: centos6
   jobs:
@@ -47,6 +51,13 @@ groups:
   - docker-gpdb-pxf-dev-ubuntu16
   - docker-gpdb-pxf-dev-ubuntu16-cdh-server
   - docker-gpdb-pxf-dev-ubuntu16-hdp-server
+
+- name: ubuntu18
+  jobs:
+  - docker-gpdb-dev-ubuntu18
+  - docker-gpdb-pxf-dev-ubuntu18
+  - docker-gpdb-pxf-dev-ubuntu18-cdh-server
+  - docker-gpdb-pxf-dev-ubuntu18-hdp-server
 
 ## ======================================================================
 ## RESOURCES
@@ -202,7 +213,7 @@ resources:
 #      uri: https://github.com/greenplum-db/pxf.git
 #      paths: [concourse/docker/centos6-hdp-secure/Dockerfile]
 
-  - name: dockerfile-gpdb-dev-ubuntu16
+  - name: dockerfile-gpdb-dev-ubuntu
     type: git
     source:
       branch: master
@@ -214,6 +225,14 @@ resources:
     source:
       repository: pivotaldata/gpdb-dev
       tag: ubuntu16
+      username: {{docker-username}}
+      password: {{docker-password}}
+
+  - name: gpdb-dev-ubuntu18-image
+    type: docker-image
+    source:
+      repository: pivotaldata/gpdb-dev
+      tag: ubuntu18
       username: {{docker-username}}
       password: {{docker-password}}
 
@@ -245,6 +264,14 @@ resources:
     source:
       repository: pivotaldata/gpdb-pxf-dev
       tag: ubuntu16
+      username: {{docker-username}}
+      password: {{docker-password}}
+
+  - name: gpdb-pxf-dev-ubuntu18-image
+    type: docker-image
+    source:
+      repository: pivotaldata/gpdb-pxf-dev
+      tag: ubuntu18
       username: {{docker-username}}
       password: {{docker-password}}
 
@@ -295,11 +322,27 @@ resources:
       username: {{docker-username}}
       password: {{docker-password}}
 
+  - name: gpdb-pxf-dev-ubuntu18-cdh-server-image
+    type: docker-image
+    source:
+      repository: pivotaldata/gpdb-pxf-dev
+      tag: ubuntu18-cdh-server
+      username: {{docker-username}}
+      password: {{docker-password}}
+
   - name: gpdb-pxf-dev-ubuntu16-hdp-server-image
     type: docker-image
     source:
       repository: pivotaldata/gpdb-pxf-dev
       tag: ubuntu16-hdp-server
+      username: {{docker-username}}
+      password: {{docker-password}}
+
+  - name: gpdb-pxf-dev-ubuntu18-hdp-server-image
+    type: docker-image
+    source:
+      repository: pivotaldata/gpdb-pxf-dev
+      tag: ubuntu18-hdp-server
       username: {{docker-username}}
       password: {{docker-password}}
 
@@ -372,17 +415,19 @@ jobs:
   - name: docker-gpdb-dev-ubuntu16
     plan:
       - get: dockerfile
-        resource: dockerfile-gpdb-dev-ubuntu16
+        resource: dockerfile-gpdb-dev-ubuntu
         trigger: true
       - put: gpdb-dev-ubuntu16-image
         params:
-          build: dockerfile/src/tools/docker/ubuntu16
+          build: dockerfile/src/tools/docker/ubuntu
+          build_args:
+            BASE_IMAGE: "ubuntu:16.04"
 
   - name: docker-gpdb-pxf-dev-ubuntu16
     plan:
       - aggregate:
           - get: pxf_src
-          - get: dockerfile-gpdb-dev-ubuntu16
+          - get: dockerfile-gpdb-dev-ubuntu
             passed: [docker-gpdb-dev-ubuntu16]
             trigger: true
           - get: dockerfile-gpdb-pxf-dev-base
@@ -399,6 +444,39 @@ jobs:
           build_args:
             BASE_IMAGE: "gpdb-dev:ubuntu16"
           load_base: gpdb-dev-ubuntu16-image
+
+  - name: docker-gpdb-dev-ubuntu18
+    plan:
+      - get: dockerfile
+        resource: dockerfile-gpdb-dev-ubuntu
+        trigger: true
+      - put: gpdb-dev-ubuntu18-image
+        params:
+          build: dockerfile/src/tools/docker/ubuntu
+          build_args:
+            BASE_IMAGE: "ubuntu:18.04"
+
+  - name: docker-gpdb-pxf-dev-ubuntu18
+    plan:
+      - aggregate:
+          - get: pxf_src
+          - get: dockerfile-gpdb-dev-ubuntu
+            passed: [docker-gpdb-dev-ubuntu18]
+            trigger: true
+          - get: dockerfile-gpdb-pxf-dev-base
+            trigger: true
+          - get: gpdb-dev-ubuntu18-image
+            passed: [docker-gpdb-dev-ubuntu18]
+            trigger: true
+            params:
+              save: true
+      - put: gpdb-pxf-dev-ubuntu18-image
+        params:
+          build: .
+          dockerfile: pxf_src/concourse/docker/pxf-dev-base/Dockerfile
+          build_args:
+            BASE_IMAGE: "gpdb-dev:ubuntu18"
+          load_base: gpdb-dev-ubuntu18-image
 
   - name: docker-gpdb-pxf-dev-centos6-mapr-server
     plan:
@@ -646,7 +724,7 @@ jobs:
     plan:
     - aggregate:
       - get: pxf_src
-      - get: dockerfile-gpdb-dev-ubuntu16
+      - get: dockerfile-gpdb-dev-ubuntu
         passed: [docker-gpdb-pxf-dev-ubuntu16]
         trigger: true
       - get: dockerfile-gpdb-pxf-dev-base
@@ -675,7 +753,7 @@ jobs:
     plan:
     - aggregate:
       - get: pxf_src
-      - get: dockerfile-gpdb-dev-ubuntu16
+      - get: dockerfile-gpdb-dev-ubuntu
         passed: [docker-gpdb-pxf-dev-ubuntu16]
         trigger: true
       - get: dockerfile-gpdb-pxf-dev-base
@@ -700,3 +778,60 @@ jobs:
           BASE_IMAGE: "gpdb-pxf-dev:ubuntu16"
         load_base:  gpdb-pxf-dev-ubuntu16-image
 
+  - name: docker-gpdb-pxf-dev-ubuntu18-cdh-server
+    plan:
+    - aggregate:
+      - get: pxf_src
+      - get: dockerfile-gpdb-dev-ubuntu
+        passed: [docker-gpdb-pxf-dev-ubuntu18]
+        trigger: true
+      - get: dockerfile-gpdb-pxf-dev-base
+        passed: [docker-gpdb-pxf-dev-ubuntu18]
+        trigger: true
+      - get: dockerfile-gpdb-pxf-dev-server
+        trigger: true
+      - get: singlecluster
+        resource: singlecluster-CDH
+        passed: [singlecluster_noarch_cdh]
+        trigger: true
+      - get: gpdb-pxf-dev-ubuntu18-image
+        passed: [docker-gpdb-pxf-dev-ubuntu18]
+        trigger: true
+        params:
+          save: true
+    - put: gpdb-pxf-dev-ubuntu18-cdh-server-image
+      params:
+        build: .
+        dockerfile: pxf_src/concourse/docker/pxf-dev-server/Dockerfile
+        build_args:
+          BASE_IMAGE: "gpdb-pxf-dev:ubuntu18"
+        load_base:  gpdb-pxf-dev-ubuntu18-image
+
+  - name: docker-gpdb-pxf-dev-ubuntu18-hdp-server
+    plan:
+    - aggregate:
+      - get: pxf_src
+      - get: dockerfile-gpdb-dev-ubuntu
+        passed: [docker-gpdb-pxf-dev-ubuntu18]
+        trigger: true
+      - get: dockerfile-gpdb-pxf-dev-base
+        passed: [docker-gpdb-pxf-dev-ubuntu18]
+        trigger: true
+      - get: dockerfile-gpdb-pxf-dev-server
+        trigger: true
+      - get: singlecluster
+        resource: singlecluster-HDP
+        passed: [singlecluster_noarch_hdp]
+        trigger: true
+      - get: gpdb-pxf-dev-ubuntu18-image
+        passed: [docker-gpdb-pxf-dev-ubuntu18]
+        trigger: true
+        params:
+          save: true
+    - put: gpdb-pxf-dev-ubuntu18-hdp-server-image
+      params:
+        build: .
+        dockerfile: pxf_src/concourse/docker/pxf-dev-server/Dockerfile
+        build_args:
+          BASE_IMAGE: "gpdb-pxf-dev:ubuntu18"
+        load_base:  gpdb-pxf-dev-ubuntu18-image
