Upgrade the Postgres JDBC Driver version (#180)
The previous JDBC driver had issues with binary data when connecting to
Greenplum 6 and above. The new JDBC driver is converting the binary data
correctly on 5 and above.

Co-authored-by: Francisco Guerrero <fguerrero@pivotal.io>
Co-authored-by: Oliver Albertini <oalbertini@pivotal.io>

--- a/automation/Makefile
+++ b/automation/Makefile
@@ -63,7 +63,7 @@ PXF_CONF_SERVERS=~/pxf/servers
 
 SED_OPTS=-i
 ifeq ($(UNAME_S),Darwin)
-    SED_OPTS+= '""'
+    SED_OPTS+= ""
 endif
 
 ifeq "$(PXF_TEST_DEBUG)" "true"
