--- a/server/build.gradle
+++ b/server/build.gradle
@@ -225,7 +225,7 @@ project('pxf-jdbc') {
     dependencies {
         compile(project(':pxf-api'))
 
-        bundleJars "postgresql:postgresql:8.4-702.jdbc4"
+        bundleJars "postgresql:postgresql:9.1-901-1.jdbc4"
         bundleJars "org.apache.hive:hive-jdbc:1.1.0"     // 1.2.2 breaks on CDH-5.x
         bundleJars "org.apache.hive:hive-service:1.1.0"  // 1.2.2 breaks on CDH-5.x
     }
