Consume the correct release-candidates
Kris explained where they should be coming from, (definitely not the
`intermediates`!).

Authored-by: Oliver Albertini <oalbertini@pivotal.io>

--- a/concourse/tasks/test_pxf.yml
+++ b/concourse/tasks/test_pxf.yml
@@ -11,6 +11,9 @@ params:
   IMPERSONATION: true
   HADOOP_CLIENT: HDP
   GROUP: smoke
+  TEST_OS:
+  ACCESS_KEY_ID:
+  SECRET_ACCESS_KEY:
   TARGET_OS: centos
   TARGET_OS_VERSION:
   TEST_ENV:
