--- a/automation/pom.xml
+++ b/automation/pom.xml
@@ -172,9 +172,9 @@
         </dependency>
 
         <dependency>
-            <groupId>postgresql</groupId>
+            <groupId>org.postgresql</groupId>
             <artifactId>postgresql</artifactId>
-            <version>8.4-702.jdbc4</version>
+            <version>42.2.5</version>
         </dependency>
 
         <dependency>
