Enable JDBC Connection Pooling (#186)
* WIP

* tests for connection pool

* Added empty line

Co-authored-by: Alexander Denissov <adenissov@pivotal.io>
Co-authored-by: Raymond Yin <ryin@pivotal.io>

* Updated documentation

Co-authored-by: Alexander Denissov <adenissov@pivotal.io>
Co-authored-by: Raymond Yin <ryin@pivotal.io>

* Addressed PR feedback, fixed Hive isValid() not being supported

Co-authored-by: Alexander Denissov <adenissov@pivotal.io>
Co-authored-by: Raymond Yin <ryin@pivotal.io>

* Add private constructor for ConnectionManager

Initialize cached threadpool and loading cache in constructor

Co-authored-by: Alexander Denissov <adenissov@pivotal.io>
Co-authored-by: Raymond Yin <ryin@pivotal.io>

* Added tests for datasource eviction and closure

Co-authored-by: Alexander Denissov <adenissov@pivotal.io>
Co-authored-by: Raymond Yin <ryin@pivotal.io>

--- a/server/build.gradle
+++ b/server/build.gradle
@@ -224,7 +224,7 @@ project('pxf-hive') {
 project('pxf-jdbc') {
     dependencies {
         compile(project(':pxf-api'))
-
+        compile("com.zaxxer:HikariCP:3.3.1")
         bundleJars "org.postgresql:postgresql:42.2.5"
         bundleJars "org.apache.hive:hive-jdbc:1.1.0"     // 1.2.2 breaks on CDH-5.x
         bundleJars "org.apache.hive:hive-service:1.1.0"  // 1.2.2 breaks on CDH-5.x
