Enable support for PXF server to run with Java-11 (#207)
* Added JAXB dependencies, edited catalina.sh for Java 11

* added java 11 pipeline

* set JAVA_HOME for JDK11 in CI test setup script

* update HBase client version to 1.3.2

* removed listeners, added logging config to stop command

--- a/concourse/tasks/test_pxf.yml
+++ b/concourse/tasks/test_pxf.yml
@@ -17,5 +17,6 @@ params:
   TARGET_OS_VERSION:
   TEST_ENV:
   TEST_OS:
+  RUN_JDK_VERSION: 8
 run:
   path: pxf_src/concourse/scripts/test_pxf.bash
