--- a/concourse/pipelines/templates/pxf-tpl.yml
+++ b/concourse/pipelines/templates/pxf-tpl.yml
@@ -20,6 +20,7 @@ groups:
       - test_pxf_hdp_secure_with_impersonation
       - test_pxf_no_impersonation
       - test_pxf_hdp_multinode_gpdb
+      - test_pxf_hdp_centos7_java11
 {% if pipeline_type == "release" %}
       - test_pxf_hdp_centos6
       - test_pxf_mapr_centos6
@@ -39,6 +40,7 @@ groups:
       - compile_gpdb_centos6
 {% endif %}
       - test_pxf_cdh_centos6
+      - test_pxf_hdp_centos7_java11
 {% if gpdb_type == "5X_STABLE" %}
       - test_pxf_hdp_ubuntu16
 {% else %}
@@ -176,6 +178,12 @@ resources:
   source:
     repository: pivotaldata/gpdb-pxf-dev
     tag: centos6-hdp-server
+
+- name: gpdb-pxf-dev-centos7-hdp-server
+  type: docker-image
+  source:
+    repository: pivotaldata/gpdb-pxf-dev
+    tag: centos7-hdp-server
 
 {% if pipeline_type == "release" %}
 - name: gpdb-pxf-dev-centos6-mapr-image
@@ -522,6 +530,46 @@ jobs:
 {% if acceptance %}
       ACCEPTANCE: true
 {% endif %}
+{% endif %}
+
+- name: test_pxf_hdp_centos7_java11
+  plan:
+  - aggregate:
+    - get: gpdb_src
+      passed:
+      - compile_pxf
+{% if compile_gpdb %}
+      - compile_gpdb_centos6
+{% endif %}
+    - get: bin_gpdb
+      resource: bin_gpdb_centos6
+{% if compile_gpdb %}
+      passed:
+        - compile_gpdb_centos6
+{% endif %}
+    - get: pxf_src
+      passed:
+      - compile_pxf
+      trigger: true
+    - get: pxf_tarball
+      passed:
+      - compile_pxf
+      trigger: true
+    - get: gpdb-pxf-dev-centos7-hdp-server
+  - task: test_pxf
+    file: pxf_src/concourse/tasks/test_pxf.yml
+    image: gpdb-pxf-dev-centos7-hdp-server
+    params:
+      ACCESS_KEY_ID: {{tf-machine-access-key-id}}
+      SECRET_ACCESS_KEY: {{tf-machine-secret-access-key}}
+      GROUP: gpdb,proxy,profile
+      TEST_ENV: {{test-env}}
+      HADOOP_CLIENT: HDP
+      TARGET_OS: centos
+      TARGET_OS_VERSION: 7
+      RUN_JDK_VERSION: 11
+{% if acceptance %}
+      ACCEPTANCE: true
 {% endif %}
 
 {% if gpdb_type == "5X_STABLE" %}
@@ -1043,6 +1091,7 @@ jobs:
   - get: pxf_tarball
     passed:
     - test_pxf_cdh_centos6
+    - test_pxf_hdp_centos7_java11
 {% if gpdb_type == "5X_STABLE" %}
     - test_pxf_hdp_ubuntu16
 {% else %}
@@ -1065,6 +1114,7 @@ jobs:
   - get: pxf_tarball
     passed:
     - test_pxf_hdp_centos6
+    - test_pxf_hdp_centos7_java11
     - test_pxf_cdh_centos6
     #- test_pxf_mapr_centos6
 {% if gpdb_type == "5X_STABLE" %}
@@ -1086,6 +1136,7 @@ jobs:
   - get: pxf_src
     passed:
     - test_pxf_hdp_centos6
+    - test_pxf_hdp_centos7_java11
     - test_pxf_cdh_centos6
 {% if gpdb_type == "5X_STABLE" %}
     - test_pxf_hdp_ubuntu16
